Fixed cart not showong on mobile

--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -9,7 +9,7 @@
   background-color: white;
   border-radius: 8px;
   padding: 1rem 1.25rem;
-  border: solid 2px black;
+  z-index:5;
 }
 .cart-header{
   border-bottom:1px solid;
